[package]
name = "common-testing"
authors = ["Dane Stuckel <dane@softwarepatterns.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

include = ["/src"]

[lib]
bench = false

[dependencies]
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
pretty_assertions = { version = "1.3.0", features = ["std", "alloc"] }
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.18.0"
